kubernetes-deployments/applications/bitwarden/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: bitwarden
  type: ClusterIP
